# ticker-rs

./: Cargo.toml  LICENSE.md  README.md  ui.drawio
resources/yahoo/: googl.json  plug.json
src/: app.rs  de.rs  error.rs  lib.rs  main.rs  ui.rs
src/agents/: mod.rs  yahoo.rs
src/tickers/: mod.rs  yahoo.rs
