[package]
name = "ticker"
version = "0.1.0"
authors = ["Joe Krywicki <joe.krywicki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
hyper = { version="0.14", features=["full"] }
hyper-tls = "0.5"
futures = "0.3"
tokio = { version="1.0", features=["full"] }
async-trait = "0.1"

#tui = "0.14"
#termion = "1.5"
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
 