[package]
name = "ticker"
version = "0.1.0"
authors = ["Joe Krywicki <joe.krywicki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version="1.0", features=["full"] }
async-trait = "0.1"

#tui = "0.14"
#termion = "1.5"
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
